Deployment/test/svc.yaml
apiVersion: v1 
kind: Service 
metadata:
  labels:
    app: makemyplan
    env: dxl-test-gr
    country: gr
  name: makemyplan
  namespace: dxl-test-gr
spec:
  selector:
    app: makemyplan
    env: dxl-test-gr
  ports:
  - name: http
    port: 8080
    targetPort: 8080
